--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+piston_window = "0.108.0"
+rand = "0.7.3"
+ordered-float = "1.0.2"
+num-traits = "0.2.11"
